--- a/www.topmonks.cz/src/stylesheets/v2.scss
+++ b/www.topmonks.cz/src/stylesheets/v2.scss
@@ -476,7 +476,7 @@ li.tm-partners__item--adler {
   }
 }
 
-.customers {
+.testimonials {
   text-align: center;
   background: #fff url("https://res.cloudinary.com/topmonks/image/upload/v1550567115/topmonks.com/bgnd_grey.png") center top no-repeat;
   @media screen and (min-width: 840px) {
@@ -673,7 +673,7 @@ footer {
     display: inline-block;
     margin: 0;
   }
-  .customers blockquote p {
+  .testimonials blockquote p {
     font-size: 1.66em;
 
     &::before,
