--- a/www.xduediligence.com/src/stylesheets/_global.scss
+++ b/www.xduediligence.com/src/stylesheets/_global.scss
@@ -291,3 +291,28 @@ footer.footer {
     width: 30%;
   }
 }
+
+.counter {
+    
+    border: 1px solid #47cdd6;
+    padding: 20px 0;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.count-title {
+    font-size: 40px;
+    font-weight: black;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.count-text {
+    font-size: 13px;
+    font-weight: normal;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+    color:  #c9c9c9;
+}
