--- a/www.xduediligence.com/src/stylesheets/_global.scss
+++ b/www.xduediligence.com/src/stylesheets/_global.scss
@@ -301,7 +301,7 @@ footer.footer {
 }
 
 .count-title {
-    font-size: 40px;
+    font-size: 36px;
     font-weight: black;
     margin-top: 10px;
     margin-bottom: 0;
@@ -315,4 +315,8 @@ footer.footer {
     margin-bottom: 0;
     text-align: center;
     color:  #c9c9c9;
+}
+
+.numbers {
+  flex: 0 0 50%;
 }
