--- a/www.xduediligence.com/src/stylesheets/_masthead.scss
+++ b/www.xduediligence.com/src/stylesheets/_masthead.scss
@@ -31,5 +31,15 @@ header.masthead {
     h1 {
       font-size: 4rem;
     }
+
+    h2 {
+      font-size: 3rem;
+    }
   }
 }
+
+@include media-breakpoint-up(xl) {
+    h2 {
+      font-size: 3rem;
+    }
+  }
