--- a/www.topmonks.cz/src/stylesheets/v2.scss
+++ b/www.topmonks.cz/src/stylesheets/v2.scss
@@ -14,8 +14,6 @@
   --tm-grey: #9b9b9b;
   --tm-article-background: #f8fbfc;
   --tm-black: #4a4a4a;
-  --tm-black-title: #3C3C3B;
-
 }
 
 body {
@@ -40,11 +38,9 @@ body {
   --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
 }
-
 .tm-layout-align-center {
   text-align: center;
 }
-
 .tm-layout-grid__cell--span-0-desktop {
   @media screen and (min-width: 840px) {
     display: none;
@@ -53,13 +49,11 @@ body {
 
 blockquote {
   margin: 0 0 3em;
-
   p {
     position: relative;
     padding: 0 1em;
     margin-bottom: 0.5em;
     quotes: "“" "„";
-
     &::before,
     &::after {
       content: open-quote;
@@ -69,25 +63,18 @@ blockquote {
       font-weight: 900;
       position: absolute;
     }
-
     &::before {
       left: 0;
     }
-
     &::after {
       content: close-quote;
       bottom: 4px;
       padding-left: 4px;
     }
   }
-
   cite {
     padding: 0 1em;
   }
-}
-
-p {
-  line-height: 26px;
 }
 
 .tm-page-header blockquote p {
@@ -109,65 +96,29 @@ p {
 }
 
 .box--purple {
-  background: var(--tm-secondary);
+  background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
   border-radius: 32px;
   color: white;
 }
 
 .main-info {
   h2 {
-    color: var(--tm-black-title);
     text-align: center;
     border-radius: 50px;
     padding: 8px;
     background-color: white;
+    margin-bottom: 6em;
   }
-
   .box--lead {
     padding: 20px 8px;
   }
-
-  @media (min-width: 480px) {
-    position: relative;
-
-    h2 {
-      text-align: left;
-      background: none;
-      margin: 4em 0 0.5em; //64px 0 8px
-    }
-
-    .jumbotron__lead {
-      box-shadow: none;
-    }
-
-    .jumbotron__lead p {
-      max-width: 20em; //320px
-    }
-
-    .box--lead {
-      height: auto;
-    }
-  }
-  @media (max-width: 740px) {
-    h2 {
-      margin-top: 2em; //32px
-    }
-    .box--lead {
-      padding: 20px 18px;
-    }
-    .action-button {
-      margin: 0;
-    }
-  }
 }
-
 .page_sub-title p {
   font-size: 24px;
-  color: var(--tm-black);
+  color: var(--tm-contact-darkgrey);
   text-align: center;
   opacity: 0.7;
 }
-
 .page_sub-title h2 {
   text-transform: none;
 }
@@ -180,7 +131,6 @@ p {
   background-color: var(--tm-primary);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
   padding: 10px 28px;
-  width: max-content;
   margin: 0 1em;
   text-align: center;
   text-transform: uppercase;
@@ -214,30 +164,9 @@ p {
   padding: 6px 8px;
   margin: 16px 0 8px -8px;
   border-radius: 4px;
-
   &:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.12);
-  }
-}
-
-.cooperation {
-  .box {
-    align-items: center;
-    margin: 0 auto;
-    @media screen and (min-width: 840px) {
-      padding: 0 120px;
-    }
-
-    a {
-      align-items: center;
-      display: inline-flex;
-      padding: 0 2em;
-    }
-  }
-
-  @media (max-width: 840px) {
-    text-align: center;
   }
 }
 
@@ -251,7 +180,6 @@ p {
       display: none;
     }
   }
-
   h2::before {
     content: "";
     display: block;
@@ -265,7 +193,6 @@ p {
     top: 32px;
     z-index: -1;
   }
-
   h2::after {
     content: "";
     display: block;
@@ -279,39 +206,28 @@ p {
   }
 
   .box {
-    padding-top: 2em; //32px
+    background: #fff url("/images/ic_listen.svg") center top 60px no-repeat;
+    background-size: auto 82px;
+    padding-top: 160px;
     z-index: 15;
     position: relative;
-    display: grid;
-
-    & > svg {
-      margin: 0 auto;
-      height: 140px;
-    }
-
-    h3 {
-      text-align: left;
-    }
   }
-
-
+  .box.box--develop {
+    background-image: url("/images/ic_develop.svg");
+  }
+  .box.box--verify {
+    background-image: url("/images/ic_verify.svg");
+  }
   .box--purple {
     font-size: 20px;
     padding: 4px 16px;
   }
-
-  .how-we-work_btn {
-    text-align: center;
-    margin: 2em auto; //32px
-  }
-
 }
 
 .tm-partners {
   padding: 0 0 3%;
   background: #fff url("/images/bgnd_curve_3.svg") center bottom no-repeat;
   background-size: 100% auto;
-
   .tm-bgnd-wrapper {
     background-color: #f3f3f3;
   }
@@ -326,61 +242,24 @@ p {
     flex-direction: column;
   }
   margin: 0;
-
   li {
     width: 164px;
     @media screen and (min-width: 480px) {
       margin-right: 24px;
     }
   }
-
   svg {
     width: 100%;
     fill: currentColor;
     stroke: currentColor;
   }
 }
-
 li.tm-partners__item--adler {
   width: 100px;
 }
 
-.steps {
-  .step_1 {
-    @media screen and (min-width: 840px) {
-      margin-top: 40%;
-    }
-  }
-
-  .steps__step {
-    @media (max-width: 840px) {
-      background-color: white;
-      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
-      border-radius: 20px;
-      padding: 8px 20px;
-    }
-  }
-
-  @media screen and (min-width: 840px) {
-    background: url("/images/work-with-us_bgnd.png") center left no-repeat;
-    background-size: contain;
-    background-position-y: 220px;
-    z-index: 200;
-    .tm-layout-wrapper {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1550609656/topmonks.com/svg/Group.svg") center no-repeat;
-    }
-  }
-
-  .hidden-box {
-    @media (max-width: 839px) {
-      display: none;
-    }
-  }
-}
-
 .product {
   background-color: #f3f3f3;
-
   .tm-layout-wrapper {
     background: url("/images/bgnd_product_top_mobile.svg") top center no-repeat,
     url("/images/bgnd_product_mobile.svg") bottom center no-repeat;
@@ -388,13 +267,12 @@ li.tm-partners__item--adler {
     padding-top: 110px;
     padding-bottom: 110px;
   }
-
   h3 {
     color: #529cfb;
     font-size: 1em;
     text-transform: uppercase;
+    text-align: left;
   }
-
   @media screen and (max-width: 479px) {
     .tm-layout-wrapper {
       padding-left: 0;
@@ -407,18 +285,15 @@ li.tm-partners__item--adler {
         margin-left: 24px;
         background: url("/images/bgnd_step_1.svg") left 0 top 10px no-repeat;
       }
-
       &:nth-child(even) {
         padding-right: 85px;
         padding-left: 24px;
         margin-right: 24px;
         background: url("/images/bgnd_step_2.svg") right 0 top 3px no-repeat;
       }
-
       &.design {
         background-image: url("/images/bgnd_step_3.svg");
       }
-
       &.development {
         background-image: url("/images/bgnd_step_4.svg");
       }
@@ -442,125 +317,91 @@ li.tm-partners__item--adler {
       margin: 0 auto;
       background: url("/images/bgnd_product.svg") calc(50% - 20px) top no-repeat;
     }
-
-    /* <!--
-     .steps__step {
-       position: relative;
-       &:nth-child(odd) {
-         top: 65px;
-         left: 460px;
-         @media screen and (min-width: 840px) {
-           left: 560px;
-         }
-       }
-       &:nth-child(even) {
-         top: 165px;
-         left: -268px;
-         @media screen and (min-width: 840px) {
-           left: -468px;
-         }
-       }
-       &.design {
-         top: 30px;
-         @media screen and (min-width: 840px) {
-           top: 45px;
-         }
-       }
-       &.development {
-         top: 130px;
-         @media screen and (min-width: 840px) {
-           top: 147px;
-         }
-       }
-     } -->*/
+    .steps__step {
+      position: relative;
+      &:nth-child(odd) {
+        top: 65px;
+        left: 460px;
+        @media screen and (min-width: 840px) {
+          left: 560px;
+        }
+      }
+      &:nth-child(even) {
+        top: 165px;
+        left: -268px;
+        @media screen and (min-width: 840px) {
+          left: -468px;
+        }
+      }
+      &.design {
+        top: 30px;
+        @media screen and (min-width: 840px) {
+          top: 45px;
+        }
+      }
+      &.development {
+        top: 130px;
+        @media screen and (min-width: 840px) {
+          top: 147px;
+        }
+      }
+    }
   }
 }
 
 .testimonials {
+  padding: 3% 0 0;
+  background: #fff url("/images/bgnd_curve_4.svg") center top no-repeat;
+  background-size: 100% auto;
   text-align: center;
-  background: #fff url("https://res.cloudinary.com/topmonks/image/upload/v1550567115/topmonks.com/bgnd_grey.png") center top no-repeat;
-  @media screen and (min-width: 840px) {
-    background-size: 100% auto;
-  }
-
-  .box {
-    text-align: left;
-    line-height: 1.625em; //26px
-    padding-bottom: 3em; //48px
-    blockquote {
-      height: 15.25em; //244px
-      margin-bottom: 2em; //32px
-    }
-
-    figcaption {
-      padding-top: 1em; //16px
-    }
-
-    @media screen and (min-width: 840px) {
-      margin: 2em auto;
-    }
-  }
-
-  hr.line-between_grey {
+  .tm-bgnd-wrapper {
     background-color: #f3f3f3;
-    height: 2px;
-    border: none;
   }
-
   .name {
-    font-size: 1em; //16px
+    font-size: 16px;
     color: var(--tm-grey);
     text-align: center;
   }
-
-  svg {
-    display: flex;
-    margin: 3em 0 1em; //48px 0 16px
+  blockquote {
+    margin-bottom: 2em;
   }
 }
 
+.tm-testimonial__picture {
+  border-radius: 50%;
+  filter: grayscale(1);
+  width: 72px;
+  border: 2px solid #fff;
+}
 
 .contact {
+  text-align: center;
+  padding: 64px 0 100px;
+  background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
+    50% - 530px
+  ) no-repeat;
+  @media screen and (min-width: 480px) {
+    background-position: top -1px left calc(50% - 360px);
+  }
   .contact_title p {
     color: var(--tm-black);
   }
-
   .person--photo img {
     border-radius: 50%;
-    width: 112px;
+    width: 183px;
     filter: saturate(0);
   }
-
-  .box_member-contact {
-    align-self: center;
-  }
-
-  .box {
-    padding: 14px 24px 0;
-
-    h3, p {
-      text-align: left;
-    }
-  }
-
   svg {
     margin-top: 8px;
-  }
-
-  @media screen and (min-width: 840px) {
-      text-align: center;
-  }
-  @media (max-width: 740px) {
-    .box_member-contact p{
-      text-align: center;
-    }
   }
 }
 
 #page-topmonks-index {
   @media screen and (max-width: 479px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-    background-size: 50% auto;
+    background: #fff
+    url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_auto,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png")
+    no-repeat right calc(50% - 145px) top -1px;
+    background-size: 352px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
@@ -569,17 +410,18 @@ li.tm-partners__item--adler {
   screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
   screen and (max-width: 479px) and (min-resolution: 192dpi),
   screen and (max-width: 479px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_2,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png");
   }
   @media screen and (min-width: 480px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-    background-size: 50% auto;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png")
+    no-repeat right calc(50% - 390px) top -1px;
+    background-size: 1017px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2),
   screen and (min-width: 480px) and (min-resolution: 192dpi),
   screen and (min-width: 480px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 480px) and (max-width: 839px) {
     background-position: right calc(50% - 460px) top -1px;
@@ -599,7 +441,6 @@ li.tm-partners__item--adler {
     .tm-hamburger__container::after {
       color: rgba(0, 0, 0, 0.25);
     }
-
     .tm-hamburger__bar {
       background-color: var(--tm-primary);
     }
@@ -621,17 +462,14 @@ li.tm-partners__item--adler {
       &.tm-app-bar--sticky {
         background-color: #fff;
         height: 72px;
-
         .tm-layout-wrapper {
           padding: 20px 0 0 16px;
         }
-
         + main {
           margin-top: 72px;
         }
-
         .tm-menu__list a {
-          color: var(--tm-black-title);
+          color: var(--tm-primary);
         }
       }
       .tm-layout-wrapper {
@@ -643,27 +481,56 @@ li.tm-partners__item--adler {
       }
     }
   }
-
-  .tm-menu__list a {
-    color: var(--tm-black-title);
-  }
-
   .tm-app-bar--open {
     color: #fff;
-
     .tm-hamburger__container::after {
       color: rgba(255, 255, 255, 0.5);
     }
-
     .tm-hamburger__bar {
       background-color: #fff;
     }
   }
 }
 
-footer {
-  p {
-    color: #fff;
+.cooperation {
+  background-image: url("/images/bgnd_product_top.svg"),
+  url("/images/bgnd_curve_1.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom 0 left -800px, bottom -5px left calc(50% - 530px);
+  @media screen and (min-width: 480px) {
+    background-position: bottom -20px center,
+    bottom -120px left calc(50% - 400px);
+  }
+  h2 {
+    margin-bottom: 260px;
+  }
+  .tm-bgnd-wrapper {
+    @media screen and (max-width: 479px) {
+      background: transparent
+      url("https://res.cloudinary.com/topmonks/image/upload/w_440,dpr_auto,q_auto,f_auto/v1533203327/topmonks.com/bgnd_1.png")
+      no-repeat left -110px top 120px;
+      background-size: 440px auto;
+    }
+    @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
+    screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
+    screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
+    screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
+    screen and (max-width: 479px) and (min-resolution: 192dpi),
+    screen and (max-width: 479px) and (min-resolution: 2dppx) {
+      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_440,dpr_2,q_auto,f_auto/v1533203327/topmonks.com/bgnd_1.png");
+    }
+    @media screen and (min-width: 480px) {
+      background: transparent
+      url("https://res.cloudinary.com/topmonks/image/upload/w_695,dpr_auto,q_auto,f_auto/v1533203327/topmonks.com/bgnd_1.png")
+      no-repeat right calc(50% + 555px) top 140px;
+      background-size: 695px auto;
+      padding-bottom: 120px;
+    }
+    @media screen and (min-width: 840px) and (min-device-pixel-ratio: 2),
+    screen and (min-width: 840px) and (min-resolution: 192dpi),
+    screen and (min-width: 840px) and (min-resolution: 2dppx) {
+      background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_695,dpr_2,q_auto,f_auto/v1533203327/topmonks.com/bgnd_1.png");
+    }
   }
 }
 
@@ -673,20 +540,42 @@ footer {
     display: inline-block;
     margin: 0;
   }
+  .main-info {
+    position: relative;
+    h2 {
+      text-align: left;
+      background: none;
+      margin: 64px 0 8px;
+    }
+    .jumbotron__lead {
+      box-shadow: none;
+    }
+    .jumbotron__lead p {
+      max-width: 320px;
+    }
+    .box--lead {
+      height: auto;
+    }
+  }
+  .cooperation {
+    h2 {
+      margin-bottom: 18px;
+    }
+    .box + .box {
+      margin-top: calc(var(--mdc-layout-grid-gutter-desktop) * 2);
+    }
+  }
   .testimonials blockquote p {
     font-size: 1.66em;
-
     &::before,
     &::after {
       font-size: 2.22em;
       position: relative;
     }
-
     &::before {
       left: -8px;
       top: 16px;
     }
-
     &::after {
       bottom: -2px;
     }
