--- a/www.topmonks.cz/src/stylesheets/hp/jumbotron.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/jumbotron.scss
@@ -2,7 +2,7 @@
   h2 {
     color: var(--tm-black-title);
     text-align: center;
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 8px;
     background-color: white;
   }
@@ -11,13 +11,17 @@
     padding: 20px 8px;
   }
 
+  .jumbotron__cta {
+    margin-top: 0.667em;
+  }
+
   @media (min-width: 480px) {
     position: relative;
 
-    h2 {
+    .jumbotron__title {
       text-align: left;
       background: none;
-      margin: 2.8em 0 0.5em; //64px 0 8px
+      margin: 2.5em 0 0; //64px 0 8px
     }
 
     .jumbotron__lead {
@@ -30,12 +34,14 @@
 
     .box--lead {
       height: auto;
+      padding-top: 0;
     }
   }
 
-  @media (max-width: 740px) {
-    h2 {
+  @media (max-width: 480px) {
+    .jumbotron__title {
       margin-top: 2em; //32px
+      margin-bottom: 3em;
     }
     .box--lead {
       padding: 20px 18px;
