Partners logos updated to use svg symbols

--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -47,6 +47,10 @@
   svg {
     fill: currentColor;
   }
+  //svg logo colors
+  .-img_logo_pricefx {
+    --color-2: #CFCFCF;
+  }
 }
 .tm-case-studies__logo:hover {
   .tm-bgnd-wrapper {
