--- a/www.topmonks.cz/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.cz/src/stylesheets/components/case-studies/index.scss
@@ -47,6 +47,10 @@
   svg {
     fill: currentColor;
   }
+  //svg logo colors
+  .-img_logo_pricefx {
+    --color-2: #CFCFCF;
+  }
 }
 .tm-case-studies__logo:hover {
   .tm-bgnd-wrapper {
@@ -58,6 +62,9 @@
 }
 .tm-case-studies__title {
   text-align: center;
+}
+.tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
 }
 .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
@@ -72,6 +79,9 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
+  .tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
+  }
   .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
   }
