--- a/www.topmonks.com/src/stylesheets/xixoio.scss
+++ b/www.topmonks.com/src/stylesheets/xixoio.scss
@@ -27,6 +27,10 @@ body {
   line-height: 2.25em; //36px
   font-weight: lighter;
   margin: 0;
+  @media (max-width: 768px) {
+    background: linear-gradient(to bottom right, #6551E0 0, #6B359D 78%) no-repeat;
+    background-size: 100% 60%;
+  }
 }
 
 // Typography //
@@ -50,6 +54,9 @@ h2 {
 h3, p {
   font-size: 1.25em; //20px
   line-height: 2.1em; //33px;
+  @media (max-width: 768px) {
+    font-size: 1.125em; //18px
+  }
 }
 
 .text-center {
@@ -78,26 +85,59 @@ a.dead-button {
   font-size: 1.875em; //30px
   font-weight: 500;
   display: block;
-  border-radius: 100px;
   color: #fff;
-  background-color: #9371C1;
-  -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, .16);
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .16);
-  padding: 14px 58px;
   text-decoration: none;
   width: max-content;
+  @media (max-width: 768px) {
+    font-size: 1.75em;
+    padding: 14px 32px;
+  }
+}
+
+.dead-button_oval {
+  border-radius: 100px;
+  background-color: #9371C1;
+  padding: 14px 58px;
+  margin: 1em auto;
+  -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, .16);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .16);
+}
+
+a.dead-button_cube {
+  padding: 2.3em 3em 1em;//36.8px 48px 16px
+  @media (max-width: 768px) {
+    padding: 2.3em 1em 1em;//36.8px 16px 16px
+  }
+}
+
+.dead-button_cube {
+  background: #9371C1;
+  padding: 2em 5.5em 0;//32px 88px 0
+  margin: 0 auto;
+  background: url("/images/case-studies/xixoio/Union.svg") center no-repeat;
+}
+
+
+.dead-button_transparent {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 0.875em 3em;//14px 48px;
   margin: 0 auto;
 }
+
 p.text-italic {
   font-style: italic;
 }
+//
+
+
 
 // Section: Introduction //
 .intro {
   height: 46.875em; //750px
   background: url("/images/case-studies/xixoio/abstract.svg") center no-repeat;
   text-align: center;
-  padding-top: 6em;
+  padding-top: 6em;//96px
 
   .intro_text {
     margin-top: 17%;
@@ -106,16 +146,23 @@ p.text-italic {
 
 // Section: About - Description //
 .about {
+  .tm-layout-wrapper {
+    background-color: #FFFFFF;
+  }
   .description {
-    padding: 5.25em 4.625em 2.75em; //84px 74px 44px
-    background-color: white;
-    max-width: 68.75em; //1 100px
+    padding: 4.25em 2.625em 2.75em;//68px 42px 44px;
+    max-width: 68.75em; //1,100px
     margin: 0 auto;
-
+    background: url("/images/case-studies/xixoio/box-top-triangle.svg") center top -10% no-repeat;
     p {
-      margin-bottom: 1em;
+      margin-bottom: 1em;//16px
+    }
+
+    @media (max-width: 768px) {
+      padding: 1.25em 1.625em 1.75em;//20px 26px 28px
     }
   }
+
 
   a {
     text-decoration: none;
@@ -126,6 +173,7 @@ p.text-italic {
       text-decoration: underline;
     }
   }
+
 }
 
 // Section: TM - Blockchain Team //
@@ -141,18 +189,22 @@ p.text-italic {
   @media screen and (min-width: 1040px) {
     background: url("/images/case-studies/xixoio/waves.png") center no-repeat;
     background-size: 100% 100%;
+    .crypto-api svg {
+      margin-top: 2em;
+    }
   }
   @media (max-width: 1039px) {
     background: url("/images/case-studies/xixoio/waves.png") center no-repeat;
     background-size: auto;
   }
 
-  .apps-icons_desktop {
+  .apps-icons_desktop svg {
     @media (max-width: 1040px) {
       display: none;
     }
   }
-  .apps-icons_phone {
+
+  .apps-icons_phone svg {
     @media screen and (min-width: 1039px) {
       display: none;
     }
@@ -181,6 +233,9 @@ p.text-italic {
     display: inline-flex;
     border: 2px solid var(--tm-xixo-purple);
     padding: 2em 2.75em; //24px 44px
+    @media (max-width: 360px) {
+      padding: 2em 2em;
+    }
   }
 
   @media screen and (min-width: 1024px) {
@@ -207,6 +262,11 @@ p.text-italic {
   @media screen and (min-width: 1024px) {
     padding: 3em 0 4em;
   }
+  @media (max-width: 500px) {
+    h3 {
+      margin-bottom: 2.5em;
+    }
+  }
 }
 
 // Section: Our Work //
@@ -227,52 +287,14 @@ p.text-italic {
     width: max-content;
     padding: 4px 12px;
   }
-
-  .string_1 {
-    background: url("/images/case-studies/xixoio/String/01.API.svg") center no-repeat;
+  .last-diamond {
+    background: url("/images/case-studies/xixoio/release_bgnd.svg") center no-repeat;
+    background-size: 100% 100%;
+    opacity: unset;
   }
 
-  .string_2 {
-    background: url("/images/case-studies/xixoio/String/02.Infrastructure.svg") center no-repeat;
-  }
-
-  .string_3 {
-    background: url("/images/case-studies/xixoio/String/03.Crypto.svg") center no-repeat;
-  }
-
-  .string_4 {
-    background: url("/images/case-studies/xixoio/String/04.Development.svg") center no-repeat;
-  }
-
-  .string_5 {
-    background: url("/images/case-studies/xixoio/String/05.Contracts.svg") center no-repeat;
-  }
-
-  .string_6 {
-    background: url("/images/case-studies/xixoio/String/06.Testing.svg") center no-repeat;
-  }
-
-  .string_7 {
-    background: url("/images/case-studies/xixoio/String/07.Audit.svg") center no-repeat;
-  }
-
-  .string_8 {
-    background: url("/images/case-studies/xixoio/String/08.Finalizations.svg") center no-repeat;
-  }
-
-  .string_9 {
-    background: url("/images/case-studies/xixoio/String/09.Training.svg") center no-repeat;
-  }
-
-  .string_10 {
-    background: url("/images/case-studies/xixoio/String/10.Audit.svg") center no-repeat;
-  }
-
-  .top-diamond {
-    text-align: center;
-  }
-
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 701px) {
+    background: url("/images/case-studies/xixoio/line.svg") center no-repeat;
     .right-float {
       p {
         text-align: right;
@@ -289,5 +311,144 @@ p.text-italic {
         margin-left: 60%;
       }
     }
+    .string_1 {
+      background: url("/images/case-studies/xixoio/String/01.API.svg") center no-repeat;
+    }
+
+    .string_2 {
+      background: url("/images/case-studies/xixoio/String/02.Infrastructure.svg") center no-repeat;
+    }
+
+    .string_3 {
+      background: url("/images/case-studies/xixoio/String/03.Crypto.svg") center no-repeat;
+    }
+
+    .string_4 {
+      background: url("/images/case-studies/xixoio/String/04.Development.svg") center no-repeat;
+    }
+
+    .string_5 {
+      background: url("/images/case-studies/xixoio/String/05.Contracts.svg") center no-repeat;
+    }
+
+    .string_6 {
+      background: url("/images/case-studies/xixoio/String/06.Testing.svg") center no-repeat;
+    }
+
+    .string_7 {
+      background: url("/images/case-studies/xixoio/String/07.Audit.svg") center no-repeat;
+    }
+
+    .string_8 {
+      background: url("/images/case-studies/xixoio/String/08.Finalizations.svg") center no-repeat;
+    }
+
+    .string_9 {
+      background: url("/images/case-studies/xixoio/String/09.Training.svg") center no-repeat;
+    }
+
+    .string_10 {
+      background: url("/images/case-studies/xixoio/String/10.Audit.svg") center no-repeat;
+    }
+
+    .last-diamond {
+      text-align: center;
+    }
   }
+  @media (min-width: 500px) and (max-width: 800px) {
+    .string_1 {
+      min-height: 200px;
+    }
+    .right-float p {
+      margin-right: 62%;
+    }
+  }
+  @media (max-width: 700px) {
+    background: url("/images/case-studies/xixoio/line.svg") left no-repeat;
+    background-size: 1% 90%;
+    background-position-x: 13.5%;
+    margin-top: 0;
+    p, p.work_shadow-box {
+      margin-left: 4em;
+    }
+    .string_1 {
+      background: url("/images/case-studies/xixoio/String/01.API.svg") left no-repeat;
+    }
+
+    .string_2 {
+      background: url("/images/case-studies/xixoio/String/02.Infrastructure.svg") left no-repeat;
+    }
+
+    .string_3 {
+      background: url("/images/case-studies/xixoio/String/03.Crypto.svg") left no-repeat;
+    }
+
+    .string_4 {
+      background: url("/images/case-studies/xixoio/String/04.Development.svg") left no-repeat;
+    }
+
+    .string_5 {
+      background: url("/images/case-studies/xixoio/String/05.Contracts.svg") left no-repeat;
+    }
+
+    .string_6 {
+      background: url("/images/case-studies/xixoio/String/06.Testing.svg") left no-repeat;
+    }
+
+    .string_7 {
+      background: url("/images/case-studies/xixoio/String/07.Audit.svg") left no-repeat;
+    }
+
+    .string_8 {
+      background: url("/images/case-studies/xixoio/String/08.Finalizations.svg") left no-repeat;
+    }
+
+    .string_9 {
+      background: url("/images/case-studies/xixoio/String/09.Training.svg") left no-repeat;
+    }
+
+    .string_10 {
+      background: url("/images/case-studies/xixoio/String/10.Audit.svg") left no-repeat;
+    }
+
+    .last-diamond, .string_1 {
+      text-align: left;
+      background-size: 20% 80%;
+      margin-bottom: 1em;
+
+      p {
+        margin-left: 3em;
+        font-size: 30px;
+      }
+
+      p.work_shadow-box {
+        font-size: 18px;
+        margin-left: 5em;
+      }
+    }
+    .last-diamond {
+      background: url("/images/case-studies/xixoio/release_bgnd.svg") left no-repeat;
+      background-size: 20% 100%;
+      svg {
+        width: 20%;
+        height: 80%;
+      }
+    }
+    .string_2, .string_3, .string_4, .string_5, .string_6, .string_7, .string_8, .string_9, .string_10 {
+      background-size: 10% 60%;
+      margin: 0 0 0.5em 0.5em;
+
+      p, p.work_shadow-box {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+// Section: Closure//
+
+.closure {
+  font-size: 1.25em;//20px
+  max-width: 50em;//800px
+  margin: 0 auto;
 }
