--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -38,7 +38,7 @@ body {
   @media (min-width: 2500px) {
     background-size: 100% 5%;
   }
-  @media (min-width: 1624px) {
+  @media (min-width: 1624px) and (max-width: 2499px) {
     background-size: 100% 6%;
     }
   @media (min-width: 1024px) {
