Background image for "our process" section and image cleanup

--- a/www.topmonks.com/src/stylesheets/hp/funnel.scss
+++ b/www.topmonks.com/src/stylesheets/hp/funnel.scss
@@ -11,6 +11,13 @@
       margin-right: -24px;
     }
   }
+  @media screen and (min-width: 840px) {
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_auto,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png") no-repeat left calc(50% - 500px) top 230px;
+    background-size: 903px auto;
+  }
+  @media screen and (min-width: 840px) and (min-device-pixel-ratio: 2), screen and (min-width: 840px) and (min-resolution: 192dpi), screen and (min-width: 840px) and (min-resolution: 2dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_2,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png");
+  }
 
   .steps {
     padding: 0;
@@ -22,7 +29,7 @@
       padding-bottom: 50px;
       background: url("/images/bgnd_funnel_product.svg") left calc(25% - 22px) bottom no-repeat, url("/images/bgnd_funnel.svg") left calc(25% - 22px) top no-repeat;
     }
-    @media screen and (min-width: 879px){
+    @media screen and (min-width: 840px){
       padding-left: calc(50% - 37px);
       background-position:  center bottom, center top;
     }
