--- a/www.topmonks.com/src/stylesheets/xixoio.scss
+++ b/www.topmonks.com/src/stylesheets/xixoio.scss
@@ -189,14 +189,14 @@ p.text-italic {
 .proposal {
   color: #FFFFFF;
   @media screen and (min-width: 1040px) {
-    background: url("/images/case-studies/xixoio/waves.png") center no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1554044394/topmonks.com/XIXOIO/waves.jp2") center no-repeat;
     background-size: 100% 100%;
     .crypto-api svg {
       margin-top: 2em;
     }
   }
   @media (max-width: 1039px) {
-    background: url("/images/case-studies/xixoio/waves.png") center no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1554044394/topmonks.com/XIXOIO/waves.jp2") center no-repeat;
     background-size: auto;
   }
 
