Xduediligence web - space between # box

--- a/www.xduediligence.com/src/stylesheets/_global.scss
+++ b/www.xduediligence.com/src/stylesheets/_global.scss
@@ -239,6 +239,11 @@ top: 0px;
   transition: all 0.4s;
 }
 
+/* Section Numbers */
+.numbers {
+  margin: 2em;
+}
+
 footer.footer {
     padding-top: 4rem;
     padding-bottom: 4rem
