XIXOIO - Ethereum svg sizing

--- a/www.topmonks.com/src/stylesheets/xixoio.scss
+++ b/www.topmonks.com/src/stylesheets/xixoio.scss
@@ -194,6 +194,9 @@ p.text-italic {
     .crypto-api svg {
       margin-top: 2em;
     }
+    .ethereum_img svg {
+      max-width: 800px;
+    }
   }
   @media (max-width: 1039px) {
     background: url("https://res.cloudinary.com/topmonks/image/upload/v1554044394/topmonks.com/XIXOIO/waves.jp2") center no-repeat;
